@@ -2,6 +2,7 @@ package com.pragma.userservice.infrastructure.exceptionhandler;
 
 import com.pragma.userservice.domain.exception.IncorrectCredentialsException;
 import com.pragma.userservice.domain.exception.IncorrectDataException;
+import com.pragma.userservice.infrastructure.exception.InvalidRoleException;
 import com.pragma.userservice.infrastructure.exception.UserDoesntExistsException;
 import com.pragma.userservice.infrastructure.exception.UserWithEmailAlreadyExistsException;
 import com.pragma.userservice.infrastructure.exception.UserWithIDAlreadyExistsException;
@@ -15,43 +16,29 @@ import java.util.Map;
 
 @ControllerAdvice
 public class ControllerAdvisor {
-
     private static final String MESSAGE = "message";
 
-    @ExceptionHandler(UserDoesntExistsException.class)
-    public ResponseEntity<Map<String, Object>> handleUserDoesntExistsException(
-            UserDoesntExistsException ignoredUserDoesntExistsException) {
-        return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                .body(Collections.singletonMap(MESSAGE, "The users doesn't exists.") );
-    }
+    private static final Map<Class, ApiRestExceptionResponse> messages = Map.ofEntries(
+            Map.entry(UserDoesntExistsException.class,
+                    new ApiRestExceptionResponse(HttpStatus.NOT_FOUND, "The users doesn't exists.")),
+            Map.entry(UserWithEmailAlreadyExistsException.class,
+                    new ApiRestExceptionResponse(HttpStatus.CONFLICT, "A user with this email already exists.")),
+            Map.entry(UserWithIDAlreadyExistsException.class,
+                    new ApiRestExceptionResponse(HttpStatus.CONFLICT, "A user with this id already exists.")),
+            Map.entry(IncorrectDataException.class,
+                    new ApiRestExceptionResponse(HttpStatus.BAD_REQUEST, "The user provided incorrect data.")),
+            Map.entry(IncorrectCredentialsException.class,
+                    new ApiRestExceptionResponse(HttpStatus.FORBIDDEN, "Cannot login.")),
+            Map.entry(InvalidRoleException.class,
+                    new ApiRestExceptionResponse(HttpStatus.BAD_REQUEST, "The role assigned is invalid."))
+    );
 
-    @ExceptionHandler(UserWithEmailAlreadyExistsException.class)
-    public ResponseEntity<Map<String, Object>> handleUserWithEmailAlreadyExistsException(
-            UserWithEmailAlreadyExistsException ignoredUserWithEmailAlreadyExistsException) {
-        return ResponseEntity.status(HttpStatus.CONFLICT)
-                .body(Collections.singletonMap(MESSAGE, "A user with this email already exists.") );
+    @ExceptionHandler(Exception.class)
+    public ResponseEntity<Map<String, Object>> handleApiException(Exception exception){
+        System.out.println(exception.getClass());
+        ApiRestExceptionResponse api = messages.get(exception.getClass());
+        return ResponseEntity.status(api.status)
+                .body(Collections.singletonMap(MESSAGE, api.message));
     }
-
-    @ExceptionHandler(UserWithIDAlreadyExistsException.class)
-    public ResponseEntity<Map<String, Object>> handleUserWithIDAlreadyExistsException(
-            UserWithIDAlreadyExistsException ignoredUserWithIDAlreadyExistsException) {
-        return ResponseEntity.status(HttpStatus.CONFLICT)
-                .body(Collections.singletonMap(MESSAGE, "A user with this id already exists.") );
-    }
-
-    @ExceptionHandler(IncorrectDataException.class)
-    public ResponseEntity<Map<String, Object>> handleIncorrectDataException(
-            IncorrectDataException ignoredIncorrectDataException) {
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                .body(Collections.singletonMap(MESSAGE, "The user provided incorrect data.") );
-    }
-
-    @ExceptionHandler(IncorrectCredentialsException.class)
-    public ResponseEntity<Map<String, Object>> handleIncorrectCredentialsException(
-            IncorrectCredentialsException ignoredIncorrectCredentialsException) {
-        return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                .body(Collections.singletonMap(MESSAGE, "Cannot login.") );
-    }
-
 }
 
